# domotion

./: .gitignore  CHANGELOG.md  CLAUDE.md  FEATURES.md  README.md  eslint.config.js  llms.txt  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts  vitest.e2e.config.ts
.hotsheet/: settings.json
docs/: 01-fidelity.md  02-writing-mode.md  03-font-family-chain.md  04-input-pseudos.md  05-progress-meter-pseudos.md  06-css-transforms.md  07-gradient-fills.md  08-animation-model.md  09-vertical-range.md  10-repeating-gradients.md  100-rich-text-editing.md  101-caret-selection-track.md  102-editing-page-rig-cookbook.md  11-custom-checkbox-radio.md  12-diff-scoring.md  13-cursor-overlay.md  15-color-emoji-rendering.md  16-coretext-glyph-extraction.md  17-replaced-element-snapshots.md  18-background-clip-text.md  19-frosted-backdrop-fallback.md  20-css-mask-emission.md  21-mask-fragment-references.md  22-mask-element-paint-references.md  23-css-sprite-icons.md  23-fidelity.md  24-inline-svg-icon-references.md  24-writing-mode.md  25-font-family-chain.md  25-keyframe-extraction-for-symbols.md  26-input-pseudos.md  26-self-contained-svgs.md  27-image-resize-on-embed.md  27-progress-meter-pseudos.md  28-conic-gradient.md  28-css-transforms.md  29-dark-mode.md  29-gradient-fills.md  30-animation-model.md  30-webfont-unicode-range.md  (+78 more)
examples/: brand-capture-demo.ts  build-stress-gallery.ts  composite-desktop.ts  domotion-word-demo.ts  format-capture-demo.ts  hero-product-demo.ts  iframe-recursion.ts  kinetic-over-capture.ts  shared.ts  showcase-rendering.ts  showcase-transitions.ts  storyboard-demo.ts  svg-to-video-demo.ts  templates-demo.ts  terminal-demo.ts  terminal-onboarding.ts  terminal-window-scroll.ts  transition-mixed.ts  transition-tour.ts
schemas/: animate-config.schema.json  composite-config.schema.json  storyboard-config.schema.json
scripts/: build-capture-script.mjs  build-review-client.mjs  build-scrubber-client.mjs  cellpct.cjs  changelog-analysis.mjs  ci-baseline-aggregate.mjs  ci-run-shard.sh  diff-against-baseline.mjs  drop-svgs.mjs  generate-animate-schema.ts  generate-composite-schema.ts  generate-storyboard-schema.ts  merge-shard-results.mjs  probe-chess.mjs  probe-color-input.mjs  probe-coretext-glyphs.mjs  probe-dotted-phase.mjs  probe-drop-label.mjs  probe-emoji-paint.mjs  probe-fieldset-bg.mjs  probe-fieldset-border-y.mjs  (+27 more)
tools/linux-glyph-extractor/: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh
tools/linux-glyph-extractor/src/: main.cpp
tools/win32-glyph-extractor/: .gitignore  CMakeLists.txt  README.md  build-msvc-direct.bat  build.ps1
tools/win32-glyph-extractor/src/: main.cpp
(+1069 files in other folders)
